Added support for job messages
